Modification des crédits

--- a/rel-electro-immersif-src/v1/print.html
+++ b/rel-electro-immersif-src/v1/print.html
@@ -141,23 +141,30 @@
 <h2 id="description"><a class="header" href="#description">Description</a></h2>
 <p>Cette ressource éducative libre (REL) regroupe des <strong>notes de cours</strong> sur l'intégration de l'électronique aux espaces immersifs dans un contexte de création multimédia. Elle traite de l’intégration de capteurs et actionneurs dans un grand espace où l'ordinateur multimédia, qui doit coordonner les aspects audiovisuels (les projections visuelles, les éclairages, les effets et les diffusions sonores), est distant.</p>
 <p>Ces notes de cours peuvent être particulièrement utiles dans le cadre d'un cours d'enseignement supérieur dans une discipline qui traite d'art et d'électronique.</p>
+<h2 id="version"><a class="header" href="#version">Version</a></h2>
+<p>Cette documentation est publiée sur un support adapté à la mise à jour et à la contribution par la communauté. </p>
+<p><strong>Toute personne est invitée à contribuer au code source à l'adresse suivante : <a href="https://github.com/tim-montmorency/rel-electro-immersif">github.com/tim-montmorency/rel-electro-immersif</a></strong>.</p>
+<p>La publication la plus à jour, c'est à dire celle en développement, sera toujours disponible à l'adresse suivante : <a href="https://tim-montmorency.com/rel-electro-immersif/">tim-montmorency.com/rel-electro-immersif</a>.</p>
+<p>À des fins d'archivage, des versions statiques sont sporadiquement publiées :</p>
+<ul>
+<li>Version 1 (1 mars 2023) : <a href="https://tim-montmorency.com/rel-electro-immersif/v1">tim-montmorency.com/rel-electro-immersif/v1</a>.</li>
+</ul>
 <h2 id="format"><a class="header" href="#format">Format</a></h2>
 <p>Ces notes ont été formatées pour être directement projetées sur grand écran dans le cadre d'une classe. Les éléments visuels ont été privilégiés et le texte y est épuré et agrandi pour permettre une meilleure lecture de loin. </p>
-<p>Le contenu a été subdivisé en sections non imbriquées pour que le contenu soit plus accessible et servir de référence aux étudiants pendant le cours ou à l'extérieur de la classe.</p>
+<p>Le contenu a été subdivisé en sections non imbriquées pour que le contenu soit plus accessible et servir de référence aux étudiants tout au long de leur formation ou par après.</p>
 <p><strong>Il n'est pas recommandé d'imprimer ce document puisqu'il n'a pas été prévu pour cette utilisation et plusieurs fonctionnalités et avantages de ce format seront perdus.</strong></p>
 <h2 id="crédits"><a class="header" href="#crédits">Crédits</a></h2>
 <p>Ce projet a été initié en 2022 par <a href="http://t-o-f.info">Thomas O Fredericks</a> avec la collaboration de Guillaume Arseneault, tous les deux professeurs au département de <a href="https://www.cmontmorency.qc.ca/programmes/nos-programmes-detudes/techniques/techniques-dintegration-multimedia/description-du-programme/">Techniques d'intégration multimédia</a> du <a href="https://www.cmontmorency.qc.ca/">Collège Montmorency</a>.</p>
-<p>Sa réalisation a été rendue possible grâce à un financement de la <a href="https://fabriquerel.org/rel/">fabrique REL</a>.</p>
+<p>Le suivi de projet au Collège Montmorency à été effectué par :</p>
+<ul>
+<li>Valérie Jacques, spécialiste en moyens et techniques d'enseignement aux affaires étudiantes.</li>
+<li>Géraldine Lussier, conseillère pédagogique au bureau de la réussite et de l'innovation pédagogique.</li>
+</ul>
+<p>La réalisation de cette ressource a été rendue possible grâce à un financement de la <a href="https://fabriquerel.org/rel/">fabrique REL</a>.</p>
 <h2 id="licence"><a class="header" href="#licence">Licence</a></h2>
 <p><img src="./licence.svg" alt="" /></p>
-<p>Pour citer cette REL, veuillez utiliser la formule suivante :</p>
+<p>Pour citer cette première version de la REL, veuillez utiliser la formule suivante :</p>
 <p><code>Fredericks, T. O. et Arseneault, G. (2023). Notes de cours sur l’intégration de l’électronique aux espaces immersifs. Collège Montmorency. CC BY-NC.</code></p>
-<h2 id="version"><a class="header" href="#version">Version</a></h2>
-<p>Ces notes de cours ont été conçues pour grandir et évoluer de façon continue. Vous trouverez la version la plus à jour et en développement à l'adresse suivante : <a href="https://tim-montmorency.com/rel-electro-immersif/">tim-montmorency.com/rel-electro-immersif</a></p>
-<p>À des fins d'archivage, des versions sont sporadiquement publiées :</p>
-<ul>
-<li>Version 1, publiée le 1 mars 2023 : <a href="https://tim-montmorency.com/rel-electro-immersif/v1">tim-montmorency.com/rel-electro-immersif/v1</a></li>
-</ul>
 <h2 id="conventions-de-documentation"><a class="header" href="#conventions-de-documentation">Conventions de documentation</a></h2>
 <p>Les noms de variables qui sont destinées à être créées par l'utilisateur doivent être précédés de <em>mon</em> ou <em>ma</em> pour les différencier des noms réservés du langange de programmation.</p>
 <p>Exemples :</p>
